fixed hero search search button overlapping search input

--- a/app/components/hero/hero-search/hero-search.component.less
+++ b/app/components/hero/hero-search/hero-search.component.less
@@ -7,12 +7,14 @@
 }
 
 .hero-search input {
-  width: 500px;
+  width: 430px;
+  float: left;
   height: 50px;
   color: #999 !important;
   text-align: left;
   border: 1px solid #DDDDDD;
-  border-radius: 5px;
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
   padding-left: 10px;
   .globalDefaultModFont(18, 400, @black);
 
@@ -31,6 +33,8 @@
 
   .hero-search-button {
     width: 70px;
+    float: left;
+    height: 50px;
     background-color: #44b224;
     color: #ffffff;
     font-size: 24px;
